Make CssLookedUpColorBug deterministic against released JavaFX
The wild clear()+add() toggle loop could never reproduce JDK-8268657: every
swap marks the whole subtree REAPPLY, which rebuilds each style helper
top-down and refreshes its cached firstStyleableAncestor before the node
resolves -theme-button, so the stale window never opens in a single ordered
pass. That is exactly why it only showed up on Linux/Wayland, where fast
pulses interleave with UPDATE-only (pseudo-class) passes that reuse the
existing, possibly-stale helper.

Recreate that interleaving directly against the released javafx 26.0.1 jar:
settle the tree, reflectively empty a .button-primary leaf's cached
firstStyleableAncestor (the transient Wayland state), then trigger an
UPDATE-only pass via a :hover transition. resolveRef then consults the empty
cached ancestor, drops the looked-up color, and the raw String reaches the
Paint converter -> ClassCastException; the leaf Background becomes null.

Verified in a headless Wayland (cage/XWayland, prism sw) session: every run
logs the exact reported warning ("String cannot be cast to Paint ... for
-fx-background-color from rule '*.button-primary:hover'") and exits non-zero.
A runtime carrying the fix (resolveRef walks the live parent chain) exits 0.

Needs --add-opens javafx.graphics/javafx.scene=ALL-UNNAMED (set in the jbang
RUNTIME_OPTIONS header).

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>